[project]
name = "smart-wallet-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.124.2",
    "greenlet>=3.3.0",
    "instructor>=1.13.0",
    "openai>=2.11.0",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]
